# tapegif

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml
examples/: demo.tape  explorer.py
termgif/: __init__.py  cli.py  recorder.py  renderer.py  tape.py
termgif/tests/: test_recorder.py  test_tape.py
